8336782: [lworld] CallStaticJavaNode::remove_useless_allocation does not handle dying subgraph